# qt-youtube

./: .gitmodules  AbstractDataHandler.cpp  AbstractDataHandler.h  Application.cpp  Application.h  CMakeLists.txt  Delegate.qml  Download.cpp  Download.h  DownloadManager.cpp  DownloadManager.h  IMDBSearch.cpp  IMDBSearch.h  Instance.cpp  Instance.h  LibVlcInstance.cpp  LibVlcInstance.h  LogFileSink.cpp  LogFileSink.h  Logger.cpp  Logger.h  Main.cpp  Main.qml  Media.cpp  Media.h  MediaModel.cpp  MediaModel.h  OmniMedia.pro  OpenSubtitlesClient.cpp  OpenSubtitlesClient.h  Player.cpp  Player.h  README.md  ScrollBar.qml  SearchInput.qml  VideoControl.qml  VlcMediaPlayer.cpp  VlcMediaPlayer.h  YouTubeDataHandler.cpp  YouTubeDataHandler.h  (+3 more)
QtYoutube/: MainWindow.cpp  MainWindow.h  Media.cpp  Media.h  QtYoutube.pro  YouTubeDataHandler.cpp  YouTubeDataHandler.h  YouTubeSearch.cpp  YouTubeSearch.h  main.cpp
assets/imgs/: lineedit.sci
modules/: FindVLC.cmake
